--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .logo{
     width: 30%;
     height: auto;
@@ -112,6 +115,7 @@ h1{
     text-align: center;
     font-size: 28px;
     font-family: 'Playfair Display', serif;
+    font-weight: bold;
 }
 .information{
     font-size: 24px;
@@ -155,7 +159,7 @@ footer li{
     width: 40%;
     padding: 20px;
 }
-.mywork{
+.myWork-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -169,7 +173,7 @@ footer li{
 h2{
     color: black;
     font-size: 28px;
-    font-family: 'Playfair Display', serif;
+font-family: 'Playfair Display', serif;
 }
 button{
     background-color:#F4C8B7;
@@ -229,3 +233,51 @@ p, .me li{
         background-color: red;
     }
 }
+
+/* Styles for the CTA button */
+#cta-button {
+    background-color: #F4C8B7;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* Styles for the modal */
+  .modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background overlay */
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
